force-app/main/default/objects/Driver__c/fields/CDL_Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>CDL_Expiration_Date__c</fullName>
    <label>CDL Expiration Date</label>
    <type>Date</type>
</CustomField>