force-app/main/default/objects/Driver__c/fields/CDL_Number__c.field-meta.xml
<CustomField>
    <fullName>CDL_Number__c</fullName>
    <label>CDL Number</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>