force-app/main/default/objects/Driver__c/fields/Current_Vehicle__c.field-meta.xml
<CustomField>
    <fullName>Current_Vehicle__c</fullName>
    <label>Current Vehicle</label>
    <length>100</length>
    <type>Text</type>
</CustomField>