force-app/main/default/objects/Driver__c/fields/Driver_Status__c.field-meta.xml
<CustomField>
    <fullName>Driver_Status__c</fullName>
    <label>Driver Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
                <default>true</default>
                <label>Active</label>
            </value>
            <value>
                <fullName>On_Shift</fullName>
                <label>On Shift</label>
            </value>
            <value>
                <fullName>Off_Duty</fullName>
                <label>Off Duty</label>
            </value>
            <value>
                <fullName>Inactive</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>