force-app/main/default/objects/Driver__c/fields/Hazmat_Certified__c.field-meta.xml
<CustomField>
    <fullName>Hazmat_Certified__c</fullName>
    <label>Hazmat Certified</label>
    <defaultValue>false</defaultValue>
    <type>Checkbox</type>
</CustomField>