force-app/main/default/objects/Driver__c/fields/Hazmat_Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>Hazmat_Expiration_Date__c</fullName>
    <label>Hazmat Expiration Date</label>
    <type>Date</type>
</CustomField>