force-app/main/default/objects/Driver__c/fields/Service_Regions__c.field-meta.xml
<CustomField>
    <fullName>Service_Regions__c</fullName>
    <label>Service Regions</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Washington_DC</fullName>
                <label>Washington DC</label>
            </value>
            <value>
                <fullName>Northern_Virginia</fullName>
                <label>Northern Virginia</label>
            </value>
            <value>
                <fullName>Maryland</fullName>
            </value>
            <value>
                <fullName>Delaware</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>