force-app/main/default/objects/Driver__c/fields/Total_Deliveries__c.field-meta.xml
<CustomField>
    <fullName>Total_Deliveries__c</fullName>
    <label>Total Deliveries</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>